--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <nav class="navbar navbar-expand-lg" id="Navbar-1">
             <div class="container-fluid ">
                 <a class="navbar-brand text-light" href="#">Emmanuel Morales Abarca</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon Nav-color-2"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav bg-dark">
+                <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+                    <div class="navbar-nav Nav-color-1">
                         <a class="nav-link text-light" href="#Valores">Valores</a>
                         <a class="nav-link text-light" href="#Tecnologias">Tecnologias</a>
                         <a class="nav-link text-light" href="#Experiencia">Experiencia</a>
