--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link href="./Bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <meta http-equiv="Expires" content="0">
+    <!-- <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache"> -->
+    <link rel="icon" type="image/x-icon" href="/img/General/favicon.ico">
 </head>
 
 <body>
@@ -41,7 +46,8 @@
         <h1>Emmanuel Morales Abarca</h1>
         <p>
             Desarrollador Jr. con amplia experiencia en el análisis de datos y desarrollo web <br><br>
-            Desarrolando soluciones creativas de manera eficaz con pasion por la programación, el análisis y la aplicación de diferentes tecnologías.
+            Desarrolando soluciones creativas de manera eficaz con pasion por la programación, el análisis y la
+            aplicación de diferentes tecnologías.
         </p>
     </section>
 
@@ -241,17 +247,17 @@
                                             <div class="d-flex flex-column justify-content-evenly h-100">
                                                 <div class="d-flex justify-content-evenly">
 
-                                                    <img src="./img/numpy.png" alt="react-logo" />
-                                                    <img src="./img/pandas.png" alt="react-logo" />
-                                                    <img src="./img/matplotlib.png" alt="react-logo" />
+                                                    <img src="./img/Tech/numpy.png" alt="react-logo" />
+                                                    <img src="./img/Tech/pandas.png" alt="react-logo" />
+                                                    <img src="./img/Tech/matplotlib.png" alt="react-logo" />
                                                 </div>
                                                 <div class="d-flex justify-content-evenly">
-                                                    <img src="./img/python.png" alt="Python-Logo" />
-                                                    <img src="./img/excel.png" alt="react-logo" />
+                                                    <img src="./img/Tech/python.png" alt="Python-Logo" />
+                                                    <img src="./img/Tech/excel.png" alt="react-logo" />
                                                 </div>
                                                 <div class="d-flex justify-content-evenly">
-                                                    <img src="./img/MySQL-logo.png" alt="react-logo" />
-                                                    <img src="./img/firebase.png" alt="react-logo" />
+                                                    <img src="./img/Tech/MySQL-logo.png" alt="react-logo" />
+                                                    <img src="./img/Tech/firebase.png" alt="react-logo" />
                                                 </div>
                                             </div>
                                         </div>
@@ -262,18 +268,18 @@
                                             <h3>Desarrollo Frontend</h3>
                                             <div class="d-flex flex-column justify-content-evenly h-100">
                                                 <div class="d-flex justify-content-evenly">
-                                                    <img src="./img/html.png" alt="html-logo" />
-                                                    <img src="./img/css.png" alt="css-logo" />
+                                                    <img src="./img/Tech/html.png" alt="html-logo" />
+                                                    <img src="./img/Tech/css.png" alt="css-logo" />
 
                                                 </div>
                                                 <div class="d-flex justify-content-evenly">
-                                                    <img src="./img/bt.png" alt="react-logo" />
-                                                    <img src="./img/js.png" alt="js-logo" />
+                                                    <img src="./img/Tech/bt.png" alt="react-logo" />
+                                                    <img src="./img/Tech/js.png" alt="js-logo" />
 
                                                 </div>
                                                 <div class="d-flex justify-content-evenly">
-                                                    <img src="./img/react.png" alt="react-logo" />
-                                                    <img src="./img/next-js.png" alt="react-logo" />
+                                                    <img src="./img/Tech/react.png" alt="react-logo" />
+                                                    <img src="./img/Tech/next-js.png" alt="react-logo" />
                                                 </div>
                                             </div>
                                         </div>
@@ -286,16 +292,16 @@
                                             <h3>Programación General</h3>
                                             <div class="d-flex justify-content-evenly">
                                                 <div>
-                                                    <img src="./img/Git-Icon.png" alt="git-logo" />
+                                                    <img src="./img/Tech/Git-Icon.png" alt="git-logo" />
                                                 </div>
                                                 <div>
-                                                    <img src="./img/Github.png" alt="github-logo" />
+                                                    <img src="./img/Tech/Github.png" alt="github-logo" />
                                                 </div>
                                                 <div>
-                                                    <img src="./img/vscode_icon.png" alt="vscode-logo" />
+                                                    <img src="./img/Tech/vscode_icon.png" alt="vscode-logo" />
                                                 </div>
                                                 <div>
-                                                    <img src="./img/Csharp_Logo.png" alt="c#-logo" />
+                                                    <img src="./img/Tech/Csharp_Logo.png" alt="c#-logo" />
                                                 </div>
                                             </div>
                                         </div>
@@ -311,14 +317,14 @@
                                         <h3>Diseño y Análisis Mecánico Estructural</h3>
                                         <div class="d-flex flex-column justify-content-evenly h-100 text-center">
                                             <div>
-                                                <img src="./img/DS-CATIA-Logo.png" alt="Python-Logo" />
+                                                <img src="./img/Tech/DS-CATIA-Logo.png" alt="Python-Logo" />
                                             </div>
                                             <div>
-                                                <img src="./img/solidworks.png" alt="react-logo" />
+                                                <img src="./img/Tech/solidworks.png" alt="react-logo" />
 
                                             </div>
                                             <div>
-                                                <img src="./img/ansys.png" alt="react-logo" />
+                                                <img src="./img/Tech/ansys.png" alt="react-logo" />
                                             </div>
                                         </div>
                                     </div>
@@ -329,13 +335,13 @@
                                         <h3>Otros Desarrollos</h3>
                                         <div class="d-flex flex-column justify-content-evenly h-100 text-center">
                                             <div>
-                                                <img src="./img/Matlab_Logo.png" alt="html-logo" />
+                                                <img src="./img/Tech/Matlab_Logo.png" alt="html-logo" />
                                             </div>
                                             <div>
-                                                <img src="./img/Simulink_Logo.png" alt="css-logo" />
+                                                <img src="./img/Tech/Simulink_Logo.png" alt="css-logo" />
                                             </div>
                                             <div>
-                                                <img src="./img/Arduino_Logo.svg.png" alt="js-logo" />
+                                                <img src="./img/Tech/Arduino_Logo.svg.png" alt="js-logo" />
                                             </div>
                                         </div>
                                     </div>
@@ -363,22 +369,22 @@
                     <div>
                         <h3>Idiomas</h3>
                         <div class="d-flex justify-content-evenly align-items-center">
-                            <img src="./img/English.png" alt="Python-Logo" />
+                            <img src="./img/Tech/English.png" alt="Python-Logo" />
                             <span>Inlges B1</span>
                         </div>
                     </div>
                     <div>
                         <h3>Normas</h3>
                         <diV class="d-flex justify-content-center">
-                            <img src="./img/iso-9001.png" alt="react-logo" />
+                            <img src="./img/Tech/iso-9001.png" alt="react-logo" />
                         </diV>
                     </div>
                     <div>
                         <h3>Sistemas Operativos</h3>
                         <div class="d-flex justify-content-evenly">
-                            <img src="./img/Windows-New-Logo.png" alt="react-logo" />
-                            <img src="./img/MacOS_logo.svg.png" alt="react-logo" />
-                            <img src="./img/ubuntu-logo.png" alt="react-logo" />
+                            <img src="./img/Tech/Windows-New-Logo.png" alt="react-logo" />
+                            <img src="./img/Tech/MacOS_logo.svg.png" alt="react-logo" />
+                            <img src="./img/Tech/ubuntu-logo.png" alt="react-logo" />
                         </div>
                     </div>
                 </div>
@@ -417,7 +423,7 @@
                     <li>
                         Elaboración y seguimiento de procesos del Sistema de Gestión de Calidad ISO 9001:2015.
                     </li>
-                    <li >
+                    <li>
                         Desarrollo y seguimiento de KPIs para la mejora continua de procesos y un mejor control del
                         personal, los ingresos y egresos finacieros<br>
                         y materiales, así como la elaboración de los formatos y sistemas necesarios.
@@ -432,13 +438,14 @@
                 <h3>CENTRO DE DESARROLLO AEROESPACIAL DEL INSTITUTO POLITÉCNICO NACIONAL</h3>
                 <h4>Colaborador 2020 - 2021</h4>
                 <ul>
-                    <li >
+                    <li>
                         Extracción, análisis y reportes de datos provenientes de sensores de la misión experimental
                         EMIDSS-1, colaboración entre NASA – UNAM – IPN.
                     </li>
                     <li>
                         Desarrollo de una interfaz que muestra la orientación y trayectoria de un vehículo, utilizado
-                        para la interpretación visual de datos, <br> otorgando un mejor entendimiento de estos, desarrollado
+                        para la interpretación visual de datos, <br> otorgando un mejor entendimiento de estos,
+                        desarrollado
                         en MATLAB.
                     </li>
                     <li>
